Closed
Bug 939445
Opened 12 years ago
Closed 12 years ago
"general.appname.override" pref is ignored (Firefox 25 regression)
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
VERIFIED
FIXED
mozilla28
People
(Reporter: am5050, Assigned: longsonr)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
2.01 KB,
patch
|
smaug
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/32.0.1678.0 Safari/537.36
Steps to reproduce:
Set "general.appname.override" pref to "Hello", then visited a test page that reports the value of navigator.appName.
Actual results:
navigator.appName = "Netscape"
Expected results:
navigator.appName = "Hello"
This was caused by a changeset for https://bugzilla.mozilla.org/show_bug.cgi?id=838146
https://hg.mozilla.org/mozilla-central/rev/7c7ef42d1fe1
general.appname.override no longer is honored due to the removal of the return:
1.714 -nsresult
1.715 +void
1.716 NS_GetNavigatorAppName(nsAString& aAppName)
1.717 {
1.718 if (!nsContentUtils::IsCallerChrome()) {
1.719 const nsAdoptingString& override =
1.720 mozilla::Preferences::GetString("general.appname.override");
1.721
1.722 if (override) {
1.723 aAppName = override;
1.724 - return NS_OK;
1.725 }
1.726 }
1.727
1.728 aAppName.AssignLiteral("Netscape");
1.729 - return NS_OK;
1.730 }
| Reporter | ||
Updated•12 years ago
|
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → longsonr
| Assignee | ||
Comment 1•12 years ago
|
||
| Assignee | ||
Updated•12 years ago
|
Component: Untriaged → DOM
Product: Firefox → Core
| Assignee | ||
Updated•12 years ago
|
Attachment #8333558 -
Flags: review?(bugs)
| Assignee | ||
Updated•12 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•12 years ago
|
Attachment #8333558 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 2•12 years ago
|
||
Thanks for the pointer to the code to fix Adam.
https://hg.mozilla.org/integration/mozilla-inbound/rev/56791576d790
Flags: in-testsuite+
Comment 3•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Comment 4•12 years ago
|
||
Robert, thanks for picking this up! Should we get this backported?
Comment 6•12 years ago
|
||
I've hit this bug with one app which where testing IE browser using !navigator.appName!="netscape" method and I was not able to bypass it using a plugin.
+1
Please backport it.
| Assignee | ||
Comment 7•12 years ago
|
||
Comment on attachment 8333558 [details] [diff] [review]
patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 838146
User impact if declined: At least one extension uses this: https://addons.mozilla.org/en-US/firefox/addon/user-agent-switcher/reviews/
Testing completed (on m-c, etc.): landed on m-c with a test some time ago.
Risk to taking this patch (and alternatives if risky): low, it's only one line.
String or IDL/UUID changes made by this patch: none
Attachment #8333558 -
Flags: approval-mozilla-beta?
Attachment #8333558 -
Flags: approval-mozilla-aurora?
Updated•12 years ago
|
Attachment #8333558 -
Flags: approval-mozilla-beta?
Attachment #8333558 -
Flags: approval-mozilla-beta+
Attachment #8333558 -
Flags: approval-mozilla-aurora?
Attachment #8333558 -
Flags: approval-mozilla-aurora+
| Assignee | ||
Updated•12 years ago
|
Keywords: checkin-needed
Whiteboard: needs landing on beta/aurora using hg qimport
Comment 8•12 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/b718ba279b1a
https://hg.mozilla.org/releases/mozilla-beta/rev/ff4c59861cd4
status-firefox26:
--- → fixed
status-firefox27:
--- → fixed
status-firefox28:
--- → fixed
Keywords: checkin-needed
Whiteboard: needs landing on beta/aurora using hg qimport
Comment 9•12 years ago
|
||
Updated•12 years ago
|
status-b2g-v1.2:
--- → fixed
Comment 10•12 years ago
|
||
I have modified the pref and then ran the script from
http://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_nav_appname. The navigator.appName was the configured pref or Netscape if the pref wasn't set.
Verified using Fx 26 beta 8 (20131125215016), latest Aurora (20131126004001), latest Nightly (20131126030201) on Win 7 64-bit, Ubuntu 13.04 32-bit and Mac OS 10.8.5.
Considering that the issue is also covered by automated tests, I'm marking these versions as verified.
QA Contact: petruta.rasa
Comment 11•12 years ago
|
||
Removing the "verifyme" keyword as per Comment 10.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•