Bug 939445 - general.appname.override has stopped working. r=smaug, a=lsblakk