dom/base/Navigator.cpp
@@ -1953,6 +1953,7 @@ NS_GetNavigatorAppName(nsAString& aAppName)
 
     if (override) {
       aAppName = override;
+      return;
     }
   }
 
